# CodeLens

./: .env.example  .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml
data/features/: 0001-strict-mode-score-boosting-Strict-mode-for-formula-q.patch  hybrid-score-boosting.json
pipeline/: __init__.py  ingest.py  ingest_cognee.py
shared/: __init__.py  embeddings.py  llm.py
